<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PAR</string>
    <string name="action_add_note">New note</string>
    <string name="action_add_time">New timebased note</string>
    <string name="action_add_location">New locationbased note</string>
    <string name="action_add_person">New personbased note</string>
    <string name="description_icon">icon</string>
    <string name="description_created">created on</string>
    <string name="description_title">title</string>
    <string name="description_message">message</string>
    <string name="description_info">info</string>
    <string name="title_activity_add_note">New note</string>
    <string name="title_activity_show_note">Details</string>
    <string name="title_activity_add_time">New timebased note</string>
    <string name="title_activity_add_location">New locationbased note</string>
    <string name="title_activity_add_person">New personbase note</string>
    <string name="btn_ok">Add note</string>
    <string name="btn_setTime">Set time</string>
    <string name="btn_setDate">Set date</string>
    <string name="new_time_date"></string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="btn_location" >Set location</string>
    <string name="btn_person">Add person</string>
    <string name="btn_delete">Delete</string>
</resources>