<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.uulm.par.MainActivity" >

    <item
        android:id="@+id/action_add_note"
        android:orderInCategory="100"
        android:title="@string/action_add_note"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_add_time"
        android:orderInCategory="101"
        android:title="@string/action_add_time"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_add_location"
        android:orderInCategory="102"
        android:title="@string/action_add_location"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_add_person"
        android:orderInCategory="103"
        android:title="@string/action_add_person"
        app:showAsAction="never"/>
</menu>
