<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.uulm.par.shownotes.ShowNote" >

    <TextView
        android:id="@+id/note_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/description_title"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/note_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/note_title"
        android:layout_below="@+id/note_title"
        android:text="@string/description_created"
        android:textColor="#a8a8a8"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/note_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/note_created"
        android:layout_below="@+id/note_created"
        android:layout_marginTop="25dp"
        android:text="@string/description_message" />

</RelativeLayout>